Reporting the shift in the RT